fix: change color green, remove letter spacing
- Change the color green in settings To make color more accessible
- remove letter spacing in all tree from arabic language
- change the name of truncate number lines to meet the name in text and
  heading

--- a/src/scss/generics/_reset.scss
+++ b/src/scss/generics/_reset.scss
@@ -21,6 +21,11 @@ body {
   font-family: Oswald, sans-serif;
   font-weight: 300;
   height: 100%;
+  line-height: 1.5;
+}
+
+body[lang='ar'] * {
+  letter-spacing: 0;
 }
 
 body::-webkit-scrollbar {
